// Copyright 2022 The Engula Authors.
//
// Licensed under the Apache License, Version 2.0 (the "License");
// you may not use this file except in compliance with the License.
// You may obtain a copy of the License at
//
// http://www.apache.org/licenses/LICENSE-2.0
//
// Unless required by applicable law or agreed to in writing, software
// distributed under the License is distributed on an "AS IS" BASIS,
// WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
// See the License for the specific language governing permissions and
// limitations under the License.

syntax = "proto3";

package engula.storage.v1.cache;

service BucketService {
  rpc CreateBucket(CreateBucketRequest) returns (CreateBucketResponse) {}

  rpc DeleteBucket(DeleteBucketRequest) returns (DeleteBucketResponse) {}

  rpc ListBuckets(ListBucketsRequest) returns (ListBucketsResponse) {}

  rpc ListObjects(ListObjectsRequest) returns (ListObjectsResponse) {}
}

service ObjectService {
  rpc UploadObject(stream UploadObjectRequest) returns (UploadObjectResponse) {}

  rpc ReadObject(ReadObjectRequest) returns (ReadObjectResponse) {}

  rpc DeleteObject(DeleteObjectRequest) returns (DeleteObjectResponse) {}
}

service CacheNodeService {
  rpc Heartbeat(HeartbeatRequest) returns (HeartbeatResponse);
}

message CreateBucketRequest { string bucket = 1; }

message CreateBucketResponse {}

message DeleteBucketRequest { string bucket = 1; }

message DeleteBucketResponse {}

message ListBucketsRequest {}

message ListBucketsResponse { repeated string buckets = 1; }

message ListObjectsRequest { string bucket = 1; }

message ListObjectsResponse { repeated string objects = 1; }

message UploadObjectRequest {
  string bucket = 1;
  string object = 2;
  bytes content = 3;
  bool replica_request = 4;
  repeated string replica_chain = 5;
}

message UploadObjectResponse {}

message ReadObjectRequest {
  string bucket = 1;
  string object = 2;
  int32 pos = 3;
  int32 len = 4;
}

message ReadObjectResponse { bytes content = 1; }

message DeleteObjectRequest {
  string bucket = 1;
  string object = 2;
}

message DeleteObjectResponse {}

message HeartbeatRequest {
  uint32 server_id = 1;
  uint64 beat_seq = 2;
  uint64 last_beat_seq = 3;
}

message HeartbeatResponse {
  uint64 beat_seq = 1;
  Status status = 2;
}

message Status {
  ObjectEvent object_event = 1;
}

message ObjectEvent {
  enum EventType {
		Full = 0;
		Increment = 1;
	}
  EventType typ = 1;
  repeated string bucket_added = 2;
  repeated string bucket_delete = 3;
  repeated BucketObject object_added = 4;
  repeated BucketObject object_delete = 5;
}

message BucketObject {
  string bucket = 1;
  string object = 2;
}
