// Copyright 2022 The Engula Authors.
//
// Licensed under the Apache License, Version 2.0 (the "License");
// you may not use this file except in compliance with the License.
// You may obtain a copy of the License at
//
// http://www.apache.org/licenses/LICENSE-2.0
//
// Unless required by applicable law or agreed to in writing, software
// distributed under the License is distributed on an "AS IS" BASIS,
// WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
// See the License for the specific language governing permissions and
// limitations under the License.

syntax = "proto3";

package engula.storage.v1.manifest;

service BucketService {
	rpc CreateBucket(CreateBucketRequest) returns (CreateBucketResponse) {}
	rpc DeleteBucket(DeleteBucketRequest) returns (DeleteBucketResponse) {}
	rpc ListBuckets(ListBucketsRequest) returns (ListBucketsResponse) {}
	rpc ListBlobs(ListBlobsRequest) returns (ListBlobsResponse) {}
}

message CreateBucketRequest { string bucket = 1; }

message CreateBucketResponse {}

message DeleteBucketRequest { string bucket = 1; }

message DeleteBucketResponse {}

message ListBucketsRequest {}

message ListBucketsResponse { repeated string buckets = 1; }

message ListBlobsRequest { string bucket = 1; }

message ListBlobsResponse { repeated string objects = 1; }
